<resources>
    <string name="helpcenter_app_name">Help Center App</string>

    <!--String values for Help Center-->
    <string name="helpcenter_test_card_text">TGL\nTest</string>
    <string name="helpcenter_interview_card_text">TGL\nInterview</string>
    <string name="helpcenter_mapping_card_text">Field\nMapping</string>
    <string name="helpcenter_tfm_card_text">Trust Group Formation</string>
    <string name="helpcenter_id_card_text">Input\nDistribution</string>
    <string name="helpcenter_text">Help Center</string>
    <string name="helpcenter_activity_group_faq_headline">MOST COMMON ISSUES:</string>
    <string name="helpcenter_activity_group_activity_issues_headline">I NEED HELP WITH:</string>
    <string name="helpcenter_answer_feedback_question">Did this answer help you ?</string>
    <string name="helpcenter_yes">Yes</string>
    <string name="helpcenter_no">No</string>
    <string name="helpcenter_contact_us_text">CONTACT US FOR FREE</string>
    <string name="helpcenter_phone_call">FREE PHONE CALL</string>
    <string name="helpcenter_whatsapp">USE WHATSAPP</string>
    <string name="helpcenter_choose">CHOOSE</string>
    <string name="helpcenter_feedback_appreciate">Thanks for your feedback</string>
    <string name="helpcenter_not_found_headline">Not Found</string>
    <string name="helpcenter_not_found_suggestion_text">Have you tried syncing your app ?</string>
    <string name="helpcenter_check_network">Kindly Check Network Connection</string>
    <string name="helpcenter_cancel_operation">Cancel Operation</string>
    <string name="helpcenter_close">Close</string>
    <string name="helpcenter_selected_language_toast">Language selected: </string>
    <string name="helpcenter_syncing_toast">Syncing Help Center Database…</string>
    <string name="helpcenter_resources_download_toast">Total resources to be downloaded:</string>
    <string name="helpcenter_whatsapp_install_prompt">Kindly install WhatsApp</string>
    <string name="helpcenter_whatsapp_contact_error">WhatsApp Contact not found</string>
    <string name="helpcenter_whatsapp_unable_to_send">Unable to send WhatsApp message</string>
    <string name="helpcenter_negative_dropdown_hint">Tell us how to serve you better</string>

</resources>
