<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".QuestionActivities.ViewIssueAndAnswer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/qandaHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/montserrat"
                android:text="Sample Header"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/qandaContent"
                android:text="Sample Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <VideoView
                android:id="@+id/resource_video_view"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/resource_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                app:srcCompat="@drawable/helpcenter_no_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ratingheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/helpcenter_answer_feedback_question"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                android:textSize="18sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ratingsection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/helpcenter_yes"
                    app:backgroundTint="#4CAF50"
                    app:icon="@drawable/ic_helpcenter_thumbs_up" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="Button"
                    android:visibility="invisible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rating2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/helpcenter_no"
                    app:backgroundTint="#F44336"
                    app:icon="@drawable/ic_helpcenter_thumbs_down" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/negativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_negative_reason"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/helpcenter_negative_dropdown_hint"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <AutoCompleteTextView
                        android:id="@+id/atv_negative_reason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitfeedback"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="SUBMIT" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>