<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#050150"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/helpcenter_text"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tgl_test_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="true"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageView_test"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:scaleType="fitCenter"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_helpcenter_test_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/divider_test"
                            android:fontFamily="serif"
                            android:text="@string/helpcenter_test_card_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            android:textSize="18dp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider_test"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/imageView_test"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="?android:attr/listDivider" />

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tgl_interview_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="true"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageView_interview"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_helpcenter_interview_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/divider_interview"
                            android:fontFamily="serif"
                            android:text="@string/helpcenter_interview_card_text"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            android:textSize="18sp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider_interview"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/imageView_interview"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="?android:attr/listDivider" />

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/field_mapping_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="true"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageView_field_mapping"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_helpcenter_fieldmapping_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_below="@id/divider_field_mapping"
                            android:fontFamily="serif"
                            android:text="@string/helpcenter_mapping_card_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider_field_mapping"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/imageView_field_mapping"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="?android:attr/listDivider" />

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/tfm_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="true"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageView_tfm"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_helpcenter_tfm_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/divider_tfm"
                            android:fontFamily="serif"
                            android:text="@string/helpcenter_tfm_card_text"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            android:textSize="18sp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider_tfm"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/imageView_tfm"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="?android:attr/listDivider" />

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <!--<androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:alignmentMode="alignMargins"
                app:columnCount="2"
                app:rowCount="1"
                app:columnOrderPreserved="false">





            </androidx.gridlayout.widget.GridLayout>-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSync"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sync to get up to date data" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>